# goods-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  good.http  goods.http  http-client.env.json  user.http
doc/: good.md  user.md
src/: claims.rs  data.rs  main.rs
src/route/: mod.rs
src/route/good/: add_good.rs  del_good.rs  get_good.rs  get_good_list.rs  has_good.rs  mod.rs  search_good.rs  update_good.rs
src/route/user/: autologin.rs  del_user.rs  get_goods.rs  get_user_list.rs  get_username_list.rs  is_administrator.rs  login.rs  mod.rs  search_user.rs  signup.rs  update_user.rs
src/sql/: good.rs  log.rs  mod.rs  sqlite_util.rs  user.rs
templates/: index.html
